--- a/config/content.htm
+++ b/config/content.htm
@@ -1,14 +1,10 @@
-<h1>About</h1>
-<p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
-<h4>利用 cmsimde 建立靜態網誌方法:</h4>
-<p>1. 在 github 建立倉儲, git clone 到近端</p>
-<p>2. 參考 <a href="https://github.com/mdecourse/newcms">https://github.com/mdecourse/newcms</a>, 加入除了 cmsimde 目錄外的所有內容</p>
-<p>以 git submodule add <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> cmsimde</p>
-<p>建立 cmsimde 目錄, 並從 github 取下子模組內容.</p>
-<p>3.在近端維護時, 更換目錄到倉儲中的 cmsimde, 以 python wsgi.py 啟動近端網際伺服器.</p>
-<p>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</p>
-<p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
-<p>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https://github.com/mdecourse/newcms.git</a></p>
+<h1>簡介</h1>
+<p>github:<a href="https://github.com/s40723147/cd2020">https://github.com/s40723147/cd2020</a></p>
+<p>blog:<a href="https://s40723147.github.io/cd2020/blog/index.html">https://s40723147.github.io/cd2020/blog/index.html</a></p>
+<p>reveal:<a href="https://s40723147.github.io/cd2020/reveal/index.html#/">https://s40723147.github.io/cd2020/reveal/index.html#/</a></p>
+<p>youtube:<a href="https://www.youtube.com/channel/UCCsh_1xCiVRhiKTEWxbyVyg?view_as=subscriber">https://www.youtube.com/channel/UCCsh_1xCiVRhiKTEWxbyVyg?view_as=subscriber</a></p>
+<p>cd2020ag2:<a href="https://github.com/s40723150/cd2020ag2">https://github.com/s40723150/cd2020ag2</a></p>
+<p>cd2020ag2 page:<a href="https://s40723150.github.io/cd2020ag2/content/index.html">https://s40723150.github.io/cd2020ag2/content/index.html</a></p>
 <h1>課堂筆記</h1>
 <p>將紀錄40723147 在CD2020當周課堂筆記</p>
 <p><span style="color: #ffffff; background-color: #000000;">----------------------------------------------------------------------------------------------------------------</span></p>
@@ -53,7 +49,8 @@
 <p>參考資料:<a href="https://zh.wikipedia.org/zh-tw/Python">https://zh.wikipedia.org/zh-tw/Python</a></p>
 <p><span style="background-color: #000000; color: #ffffff;">----------------------------------------------------------------------------------------------------------------</span></p>
 <p><span style="background-color: #000000; color: #ffffff;"></span></p>
-<h1>亂數分組</h1>
+<h1><span style="color: #000000;">Assignment 1</span></h1>
+<h2>亂數分組</h2>
 <h4><strong><a href="https://github.com/s40723147/cd2020/blob/master/PDF/cd2020%20ag2%20Project%201%20%E4%BA%82%E6%95%B8%E5%88%86%E7%B5%84.pdf">pdf連結</a></strong></h4>
 <p>亂數分組<span style="background-color: #ffcc00;">python程式</span>-甲班</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import random
@@ -130,7 +127,9 @@ print(group[36:49])</pre>
 <p>4.資料庫存取</p>
 <p>       完成亂數程序後是否可以</p>
 <p>       直接作存取或是匯出動作</p>
-<h1>電子書重點整理</h1>
+<p></p>
+<h1>Assignment 2</h1>
+<h2>電子書重點整理</h2>
 <p style="text-align: center;"><br/><strong>Industrial And </strong><strong>EngineeringProduct </strong><strong>DesignCollaboration</strong></p>
 <p style="text-align: center;"><strong>工業和工程產品-設計協同</strong></p>
 <p style="text-align: center;"><strong>摘要</strong></p>
@@ -218,4 +217,5 @@ print(group[36:49])</pre>
 <hr/>
 <div style="text-align: left;">1.2 Identifying design processes(確定設計過程)<br/><br/>1.2.1 Identifying design processes that each individual experienced</div>
 <div style="text-align: left;">         (確定每個人經歷的設計過程)<br/><br/>In the state-transition perspective, Reymen (2001) described a design process as the process of moving one state to another by performing a task at each stage and evaluating design activities. This is consistent with stage-gate models, where design activity happens at each stage and design output of the stage is evaluated at design review whereby a decision is made among whether to go to the next stage, <br/><br/>從狀態轉換的角度來看，Reymen（2001）將設計過程描述為通過在每個階段執行任務並評估設計活動將狀態從一種狀態轉移到另一種狀態的過程。這與階段門模型一致，在階段門模型中，每個階段都會進行設計活動，並在設計評審中評估階段的設計輸出，從而決定是否進入下一階段，<br/><br/> This perspective is advocated from most stage-based models (Wynn &amp; Clarkson, 2005). A stagebased model is made up of action that is intended to perform a task, and a decision that is to intended to evaluate the outcomes of performing the task; the completion of which constitutes progression to the next stage<br/><br/>大多數基於階段的模型都提倡這種觀點（Wynn＆Clarkson，2005）。基於階段的模型由旨在執行任務的動作和旨在評估執行任務的結果的決策組成；這項工作的完成構成了下一階段的發展<br/><br/>Taken into the state-transition perspective, there are two activities: performing task and evaluating outcomes. <br/><br/>從狀態轉換的角度來看，有兩個活動：執行任務和評估結果。<br/><br/>Mostly, evaluation happens within a relatively short period of time to decide between ‘go forward, repeat, or drop.’ Hence, we named these kinds of activities (evaluation, design review, gate check, decision-making) as ‘event.’ At this juncture, we have two coding categories;<br/>‘task’ and ‘event.’ In conclusion, we can model a design process with four coding categories; ‘task,’ ‘event,’ ‘information flow,’ and ‘interaction,’ and can be represented with the connection of stages. <br/><br/>通常，評估是在相對較短的時間內進行的，以便在“前進，重複或下降”之間做出決定，因此，我們將這些類型的活動（評估，設計評審，檢查，決策）稱為“事件”。 目前，我們有兩個編碼類別：<br/>總而言之，我們可以使用四個編碼類別對設計過程進行建模。 “任務”，“事件”，“信息流”和“互動”，並且可以通過階段的關聯來表示。<br/><br/>We identified process elements from every piece of transcribed interview data.<br/><br/>我們從每個轉錄的訪談數據中識別出流程要素。<br/><br/>Two researchers executed the whole procedures. <br/><br/>兩名研究人員執行了整個程序。<br/><br/>One researcher firstly constructed partial design processes, and the other researcher examined them by inspecting the interview data.<br/><br/>一位研究人員首先構建了部分設計流程，另一位研究人員通過檢查訪談數據對其進行了檢查。<br/><br/>1.2.2 Identifying collaborative product design processes(確定協作產品設計流程)<br/><br/>The next stage was to combine each company’s design processes into collaborative design processes via a ‘mosaic method.’ We firstly collected partial designprocesses from a particular project in a company.<br/><br/>下一步是通過“馬賽克方法”將每個公司的設計過程組合為協作設計過程。我們首先從公司的特定項目中收集了部分設計過程。<br/><br/>The partial processes extracted from industrial designers’ interview data provided rich information on industrial design activities,<br/><br/>從工業設計師的訪談數據中提取的部分過程為工業設計活動提供了豐富的信息，<br/><br/> This work was done by crosschecking interview data in each company while evaluating the meaning and context of the specific terms. Actually, designers seemed to understand each company’s documented design process where standard terminology was defined, but were not particularly conscious of it. It seemed that they ignoredthe standardized process because the market situation was pushing them to move fast. Language difference is also a possible cause of the term difference. In the product design area, native words and borrowed words are mixed in use in Korea. For example, we use both borrowed words and native words indicating ‘design’ in English. Besides, cultural and locational differences of the<br/>two teams are likely to cause term difference. <br/><br/>通過交叉檢查每個公司的面試數據，同時評估特定術語的含義和上下文來完成這項工作。 實際上，設計師似乎了解每家公司定義了標準術語的文件化設計過程，但並沒有特別意識到這一點。 他們似乎忽略了標準化流程，因為市場形勢迫使他們迅速採取行動。 語言差異也是造成術語差異的可能原因。 在產品設計領域，韓國語中的母語和借來的單詞混合使用。 例如，我們同時使用借用字詞和用英語表示“設計”的本地字詞。 此外，文化和地理位置的差異<br/>兩支球隊可能會造成任期差異。<br/><br/><br/>1.2.3 Simplifying the processes(簡化流程)<br/><br/>We found that there was a pattern in a group of small sequential stages. There is a major job completed going through all sequential stages. After completing it, a clear new phase starts with another job. We defined those small stages as ‘process chunks.’ <br/><br/>我們發現在一組小的連續階段中存在一種模式。所有主要階段都完成了一項主要工作。完成後，一個清晰的新階段從另一個工作開始。我們將這些小階段定義為“流程塊”。<br/><br/>The internal process in a process chunk starts with the initial input and runs across small stages inside. Iteration or feedback can happen among small stages inside the chunk. Finally, they make the final decision about the final outcomes.<br/><br/>流程塊中的內部流程從初始輸入開始，並在內部的各個小階段中運行。迭代或反饋可能在塊內的各個小階段之間發生。最後，他們對最終結果做出最終決定。<br/><br/>The process flow between the two process chunks has a little chance to be reversed after the previous outcome goes into the input of the next chunk. The cross-teams generally make the final design, which is approved by the top manager at each chunk. To go back to the previous chunk means that it could not meet the timeline to the market. <br/><br/>在前一個結果進入下一個塊的輸入之後，兩個過程塊之間的過程流幾乎沒有機會被逆轉。 跨團隊通常進行最終設計，並由高層經理在每個工作組中批准。 回到上一個區塊意味著它無法滿足市場時間表。<br/><br/>Thus, there should be a top management’s decision on the issue. Based on interview data, they would rather drop the project than go back to the previous phase. <br/><br/>因此，應該由最高管理者對此問題做出決定。 根據訪談數據，他們寧願放棄該項目，也不願返回上一個階段。<br/><br/>We named the process chunks by their main jobs. While naming the chunks,we found that the term ‘concept design’ is used differently by engineering design and industrial design.<br/><br/>我們通過其主要工作來命名流程塊。 在命名這些塊時，我們發現“概念設計”一詞在工程設計和工業設計中的用法有所不同。<br/><br/> Concept design in engineering design is about technical concepts related to how a product works by developing broad solutions to the working structure and functions<br/><br/>工程設計中的概念設計是與技術概念有關的技術概念，該技術概念通過為工作結構和功能開發廣泛的解決方案來與產品的工作方式相關<br/><br/>1.2.4 Determining types of collaborative design processes(確定協作設計過程的類型)<br/><br/>We compared and categorized the 12 simplified collaborative product design processes based on similarities in their process structure, input and outcomes of process chunks and phases, and interaction between industrial designers and engineering designers. <br/><br/>我們根據流程結構，流程塊和階段的輸入和結果的相似性以及工業設計師和工程設計師之間的交互性，對12個簡化的協作產品設計流程進行了比較和分類。<br/><br/> Therefore, examining the types of inputs and outcomes of phases give a clue to determine how the overall process flows. Finally, we evaluated the interaction between industrial designers and engineering designers within a phase. <br/><br/> 因此，檢查階段的輸入和結果的類型為確定整個流程的流程提供了線索。最後，我們評估了一個階段中工業設計師和工程設計師之間的互動。<br/><br/><br/><br/><br/><br/><br/><br/></div>
-</div></div>
+</div>
+</div>
