--- a/content/index.html
+++ b/content/index.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='課堂筆記.html'>課堂筆記</a><li><a href='亂數分組.html'>亂數分組</a><li><a href='電子書重點整理.html'>電子書重點整理</a></li>
+                     <li><a href='簡介.html'>簡介</a><li><a href='課堂筆記.html'>課堂筆記</a><li class='has-children'><a href='Assignment 1.html'>Assignment 1</a><ul class='dropdown'><li><a href='亂數分組.html'>亂數分組</a></li></ul><li class='has-children'><a href='Assignment 2.html'>Assignment 2</a><ul class='dropdown'><li><a href='電子書重點整理.html'>電子書重點整理</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,17 +154,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='課堂筆記.html'>Next</a> >> 課堂筆記<br /><h1>About</h1>
-<p>此內容管理系統以 <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> 作為 submodule 運作, 可以選定對應的版本運作, cmsimde 可以持續改版, 不會影響之前設為 submodule, 使用舊版 cmsimde 模組的內容管理相關運作.</p>
-<h4>利用 cmsimde 建立靜態網誌方法:</h4>
-<p>1. 在 github 建立倉儲, git clone 到近端</p>
-<p>2. 參考 <a href="https://github.com/mdecourse/newcms">https://github.com/mdecourse/newcms</a>, 加入除了 cmsimde 目錄外的所有內容</p>
-<p>以 git submodule add <a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a> cmsimde</p>
-<p>建立 cmsimde 目錄, 並從 github 取下子模組內容.</p>
-<p>3.在近端維護時, 更換目錄到倉儲中的 cmsimde, 以 python wsgi.py 啟動近端網際伺服器.</p>
-<p>動態內容編輯完成後, 以 generate_pages 轉為靜態內容, 以 git add commit 及 push 將內容推到遠端.</p>
-<p>4. 之後若要以 git clone 取下包含 submodule 的所有內容, 執行:</p>
-<p>git clone --recurse-submodules <a href="https://github.com/mdecourse/newcms.git">https://github.com/mdecourse/newcms.git</a></p>
+    <div id="tipue_search_content"> <a href='課堂筆記.html'>Next</a> >> 課堂筆記<br /><h1>簡介</h1>
+<p>github:<a href="https://github.com/s40723147/cd2020">https://github.com/s40723147/cd2020</a></p>
+<p>blog:<a href="https://s40723147.github.io/cd2020/blog/index.html">https://s40723147.github.io/cd2020/blog/index.html</a></p>
+<p>reveal:<a href="https://s40723147.github.io/cd2020/reveal/index.html#/">https://s40723147.github.io/cd2020/reveal/index.html#/</a></p>
+<p>youtube:<a href="https://www.youtube.com/channel/UCCsh_1xCiVRhiKTEWxbyVyg?view_as=subscriber">https://www.youtube.com/channel/UCCsh_1xCiVRhiKTEWxbyVyg?view_as=subscriber</a></p>
+<p>cd2020ag2:<a href="https://github.com/s40723150/cd2020ag2">https://github.com/s40723150/cd2020ag2</a></p>
+<p>cd2020ag2 page:<a href="https://s40723150.github.io/cd2020ag2/content/index.html">https://s40723150.github.io/cd2020ag2/content/index.html</a></p>
 <br /> <a href='課堂筆記.html'>Next</a> >> 課堂筆記</div>
         
     <!-- footer -->
