--- a/content/課堂筆記.html
+++ b/content/課堂筆記.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='課堂筆記.html'>課堂筆記</a><li><a href='亂數分組.html'>亂數分組</a><li><a href='電子書重點整理.html'>電子書重點整理</a></li>
+                     <li><a href='簡介.html'>簡介</a><li><a href='課堂筆記.html'>課堂筆記</a><li class='has-children'><a href='Assignment 1.html'>Assignment 1</a><ul class='dropdown'><li><a href='亂數分組.html'>亂數分組</a></li></ul><li class='has-children'><a href='Assignment 2.html'>Assignment 2</a><ul class='dropdown'><li><a href='電子書重點整理.html'>電子書重點整理</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,7 +154,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='亂數分組.html'>Next</a> >> 亂數分組<br /><h1>課堂筆記</h1>
+    <div id="tipue_search_content">簡介 << <a href='簡介.html'>Previous</a> <a href='Assignment 1.html'>Next</a> >> Assignment 1<br /><h1>課堂筆記</h1>
 <p>將紀錄40723147 在CD2020當周課堂筆記</p>
 <p><span style="color: #ffffff; background-color: #000000;">----------------------------------------------------------------------------------------------------------------</span></p>
 <h4><span style="background-color: #0000ff; color: #ccffcc;"><strong>w2</strong></span></h4>
@@ -198,7 +198,7 @@ img.add_border {
 <p>參考資料:<a href="https://zh.wikipedia.org/zh-tw/Python">https://zh.wikipedia.org/zh-tw/Python</a></p>
 <p><span style="background-color: #000000; color: #ffffff;">----------------------------------------------------------------------------------------------------------------</span></p>
 <p><span style="background-color: #000000; color: #ffffff;"></span></p>
-<br />About << <a href='About.html'>Previous</a> <a href='亂數分組.html'>Next</a> >> 亂數分組</div>
+<br />簡介 << <a href='簡介.html'>Previous</a> <a href='Assignment 1.html'>Next</a> >> Assignment 1</div>
         
     <!-- footer -->
       <div class="container">
