--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -334,8 +334,20 @@ print(group[36:49])</pre>
 <div style="text-align: left;">         (確定每個人經歷的設計過程)<br/><br/>In the state-transition perspective, Reymen (2001) described a design process as the process of moving one state to another by performing a task at each stage and evaluating design activities. This is consistent with stage-gate models, where design activity happens at each stage and design output of the stage is evaluated at design review whereby a decision is made among whether to go to the next stage, <br/><br/>從狀態轉換的角度來看，Reymen（2001）將設計過程描述為通過在每個階段執行任務並評估設計活動將狀態從一種狀態轉移到另一種狀態的過程。這與階段門模型一致，在階段門模型中，每個階段都會進行設計活動，並在設計評審中評估階段的設計輸出，從而決定是否進入下一階段，<br/><br/> This perspective is advocated from most stage-based models (Wynn &amp; Clarkson, 2005). A stagebased model is made up of action that is intended to perform a task, and a decision that is to intended to evaluate the outcomes of performing the task; the completion of which constitutes progression to the next stage<br/><br/>大多數基於階段的模型都提倡這種觀點（Wynn＆Clarkson，2005）。基於階段的模型由旨在執行任務的動作和旨在評估執行任務的結果的決策組成；這項工作的完成構成了下一階段的發展<br/><br/>Taken into the state-transition perspective, there are two activities: performing task and evaluating outcomes. <br/><br/>從狀態轉換的角度來看，有兩個活動：執行任務和評估結果。<br/><br/>Mostly, evaluation happens within a relatively short period of time to decide between ‘go forward, repeat, or drop.’ Hence, we named these kinds of activities (evaluation, design review, gate check, decision-making) as ‘event.’ At this juncture, we have two coding categories;<br/>‘task’ and ‘event.’ In conclusion, we can model a design process with four coding categories; ‘task,’ ‘event,’ ‘information flow,’ and ‘interaction,’ and can be represented with the connection of stages. <br/><br/>通常，評估是在相對較短的時間內進行的，以便在“前進，重複或下降”之間做出決定，因此，我們將這些類型的活動（評估，設計評審，檢查，決策）稱為“事件”。 目前，我們有兩個編碼類別：<br/>總而言之，我們可以使用四個編碼類別對設計過程進行建模。 “任務”，“事件”，“信息流”和“互動”，並且可以通過階段的關聯來表示。<br/><br/>We identified process elements from every piece of transcribed interview data.<br/><br/>我們從每個轉錄的訪談數據中識別出流程要素。<br/><br/>Two researchers executed the whole procedures. <br/><br/>兩名研究人員執行了整個程序。<br/><br/>One researcher firstly constructed partial design processes, and the other researcher examined them by inspecting the interview data.<br/><br/>一位研究人員首先構建了部分設計流程，另一位研究人員通過檢查訪談數據對其進行了檢查。<br/><br/>1.2.2 Identifying collaborative product design processes(確定協作產品設計流程)<br/><br/>The next stage was to combine each company’s design processes into collaborative design processes via a ‘mosaic method.’ We firstly collected partial designprocesses from a particular project in a company.<br/><br/>下一步是通過“馬賽克方法”將每個公司的設計過程組合為協作設計過程。我們首先從公司的特定項目中收集了部分設計過程。<br/><br/>The partial processes extracted from industrial designers’ interview data provided rich information on industrial design activities,<br/><br/>從工業設計師的訪談數據中提取的部分過程為工業設計活動提供了豐富的信息，<br/><br/> This work was done by crosschecking interview data in each company while evaluating the meaning and context of the specific terms. Actually, designers seemed to understand each company’s documented design process where standard terminology was defined, but were not particularly conscious of it. It seemed that they ignoredthe standardized process because the market situation was pushing them to move fast. Language difference is also a possible cause of the term difference. In the product design area, native words and borrowed words are mixed in use in Korea. For example, we use both borrowed words and native words indicating ‘design’ in English. Besides, cultural and locational differences of the<br/>two teams are likely to cause term difference. <br/><br/>通過交叉檢查每個公司的面試數據，同時評估特定術語的含義和上下文來完成這項工作。 實際上，設計師似乎了解每家公司定義了標準術語的文件化設計過程，但並沒有特別意識到這一點。 他們似乎忽略了標準化流程，因為市場形勢迫使他們迅速採取行動。 語言差異也是造成術語差異的可能原因。 在產品設計領域，韓國語中的母語和借來的單詞混合使用。 例如，我們同時使用借用字詞和用英語表示“設計”的本地字詞。 此外，文化和地理位置的差異<br/>兩支球隊可能會造成任期差異。<br/><br/><br/>1.2.3 Simplifying the processes(簡化流程)<br/><br/>We found that there was a pattern in a group of small sequential stages. There is a major job completed going through all sequential stages. After completing it, a clear new phase starts with another job. We defined those small stages as ‘process chunks.’ <br/><br/>我們發現在一組小的連續階段中存在一種模式。所有主要階段都完成了一項主要工作。完成後，一個清晰的新階段從另一個工作開始。我們將這些小階段定義為“流程塊”。<br/><br/>The internal process in a process chunk starts with the initial input and runs across small stages inside. Iteration or feedback can happen among small stages inside the chunk. Finally, they make the final decision about the final outcomes.<br/><br/>流程塊中的內部流程從初始輸入開始，並在內部的各個小階段中運行。迭代或反饋可能在塊內的各個小階段之間發生。最後，他們對最終結果做出最終決定。<br/><br/>The process flow between the two process chunks has a little chance to be reversed after the previous outcome goes into the input of the next chunk. The cross-teams generally make the final design, which is approved by the top manager at each chunk. To go back to the previous chunk means that it could not meet the timeline to the market. <br/><br/>在前一個結果進入下一個塊的輸入之後，兩個過程塊之間的過程流幾乎沒有機會被逆轉。 跨團隊通常進行最終設計，並由高層經理在每個工作組中批准。 回到上一個區塊意味著它無法滿足市場時間表。<br/><br/>Thus, there should be a top management’s decision on the issue. Based on interview data, they would rather drop the project than go back to the previous phase. <br/><br/>因此，應該由最高管理者對此問題做出決定。 根據訪談數據，他們寧願放棄該項目，也不願返回上一個階段。<br/><br/>We named the process chunks by their main jobs. While naming the chunks,we found that the term ‘concept design’ is used differently by engineering design and industrial design.<br/><br/>我們通過其主要工作來命名流程塊。 在命名這些塊時，我們發現“概念設計”一詞在工程設計和工業設計中的用法有所不同。<br/><br/> Concept design in engineering design is about technical concepts related to how a product works by developing broad solutions to the working structure and functions<br/><br/>工程設計中的概念設計是與技術概念有關的技術概念，該技術概念通過為工作結構和功能開發廣泛的解決方案來與產品的工作方式相關<br/><br/>1.2.4 Determining types of collaborative design processes(確定協作設計過程的類型)<br/><br/>We compared and categorized the 12 simplified collaborative product design processes based on similarities in their process structure, input and outcomes of process chunks and phases, and interaction between industrial designers and engineering designers. <br/><br/>我們根據流程結構，流程塊和階段的輸入和結果的相似性以及工業設計師和工程設計師之間的交互性，對12個簡化的協作產品設計流程進行了比較和分類。<br/><br/> Therefore, examining the types of inputs and outcomes of phases give a clue to determine how the overall process flows. Finally, we evaluated the interaction between industrial designers and engineering designers within a phase. <br/><br/> 因此，檢查階段的輸入和結果的類型為確定整個流程的流程提供了線索。最後，我們評估了一個階段中工業設計師和工程設計師之間的互動。<br/><br/><br/><br/><br/><br/><br/></div>
 <h1>Mechatronic Project</h1>
 <p>四輪小車模型匯出連結:<strong><a href="https://meet.google.com/linkredirect?authuser=0&amp;dest=https%3A%2F%2Fcad.onshape.com%2Fdocuments%2Fe3eb0b663356e543ec6baaaf%2Fw%2Fa4c0716868b2978a27b12ee4%2Fe%2F92badca8de429b497d1e9f01">四輪車模型</a></strong></p>
+<p>第二版四輪小車模型匯出連結:<strong><a href="https://cad.onshape.com/documents/9dd3438b3682e89b807ed797/w/0d51562bf6dbc0434ab2e7fc/e/1bb1c2b6092858617ed3c189">第二版四輪車模型</a></strong></p>
 <p>可匯出提供參考</p>
-<h2>onshape</h2>
+<p></p>
+<h4><strong>傳統的產品設計</strong></h4>
+<p>首先我們需要知道時間成本對整個設計流程的重要性，</p>
+<p>假設一個產品的誕生需要經過機構、配電、程式、電資、外觀設計等流程‧</p>
+<p>若以過往的設計經驗來看需先由頭至尾一步一步經由每一位參與者的巧手下完成，</p>
+<p>在不發生不如意的情況下進行也至少需要花上好幾步的步驟來完成產品的設計‧</p>
+<h4><strong>協同產品設計</strong></h4>
+<p>協同產品設計可在同一個時間點將不同領域的人們聚集起來，</p>
+<p>各自發揮所長進行產品設計的流程，</p>
+<p>將以往需要一整串的步驟一一打破，</p>
+<p>且在更有效率的環境下進行溝通且完成最佳化設計‧</p>
+<p></p><h2>onshape</h2>
 <h4><span style="background-color: #ffff00;"><strong>onshape:</strong></span><a href="https://cad.onshape.com">https://cad.onshape.com</a></h4>
 <p style="text-align: center;">線上免費3D建模平台，隨時隨地即可將腦中的想法實作出來‧</p>
 <p style="text-align: center;"><span style="background-color: #00ff00;">第一版模型</span></p>
@@ -373,8 +385,36 @@ print(group[36:49])</pre>
 <p>我們得到了一個結果，</p>
 <p>可以藉由已經完成的四輪越野車來修改其外觀及配備，</p>
 <p>所以有了第二次模型的設計‧</p>
+<p><img alt="" height="442" src="/images/13.可當底.png" width="800"/></p>
 <p>設計流程:</p>
-<p></p><h2>CoppeliaSim</h2>
+<p>1.設計模型最大限度</p>
+<p><img alt="" height="196" src="/images/3.車本體最大限度.png" width="400"/></p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">長:0.84502000公尺
+寬:0.31258000公尺
+高:0.22972000公尺
+</pre>
+<p>2.定義外觀流線形</p>
+<p><img alt="" height="200" src="/images/4.車流線型初步構思.png" width="400"/></p>
+<p>3.圓角導入</p>
+<p><img alt="" height="196" src="/images/5.將各部位導入不同圓角.png" width="400"/></p>
+<p>4.加入尾部空力尾翼</p>
+<p><img alt="" height="197" src="/images/6.尾翼導入.png" width="400"/></p>
+<p>5.圓角導入</p>
+<p><img alt="" height="196" src="/images/7.將尾翼倒圓角.png" width="400"/></p>
+<p>6.將尾翼挖個洞升級空力套件</p>
+<p><img alt="" height="195" src="/images/8.加入空力套件.png" width="400"/></p>
+<p>7.倒入圓角</p>
+<p><img alt="" height="196" src="/images/9.圓角修飾.png" width="400"/></p>
+<p>8.薄殼車殼本體</p>
+<p><img alt="" height="196" src="/images/10.薄殼倒入.png" width="400"/></p>
+<p>9.鯊魚鰭加入</p>
+<p><img alt="" height="196" src="/images/11.加入鯊魚鰭設計.png" width="400"/></p>
+<p>10.確認兩輪軸位置</p>
+<p><img alt="" height="196" src="/images/12.1車軸間距.png" width="400"/></p>
+<p>11.將兩個輪胎挖出來</p>
+<p><img alt="" height="195" src="/images/12.挖出車輪位置.png" width="400"/></p>
+<p>12.完成圖</p>
+<p><img alt="" height="196" src="/images/2.車殼整體外觀.png" width="400"/></p><h2>CoppeliaSim</h2>
 <h4><strong>1.匯入模型</strong></h4>
 <p><strong><img alt="" height="322" src="/images/主目錄.jpg" width="400"/></strong></p>
 <p>首先先到主目錄下點取 File 會出現以下畫面</p>
