--- a/content/Mechatronic Project.html
+++ b/content/Mechatronic Project.html
@@ -156,8 +156,21 @@ img.add_border {
         </header>
     <div id="tipue_search_content">Assignment 2 << <a href='Assignment 2.html'>Previous</a> <a href='onshape.html'>Next</a> >> onshape<br /><h1>Mechatronic Project</h1>
 <p>四輪小車模型匯出連結:<strong><a href="https://meet.google.com/linkredirect?authuser=0&amp;dest=https%3A%2F%2Fcad.onshape.com%2Fdocuments%2Fe3eb0b663356e543ec6baaaf%2Fw%2Fa4c0716868b2978a27b12ee4%2Fe%2F92badca8de429b497d1e9f01">四輪車模型</a></strong></p>
+<p>第二版四輪小車模型匯出連結:<strong><a href="https://cad.onshape.com/documents/9dd3438b3682e89b807ed797/w/0d51562bf6dbc0434ab2e7fc/e/1bb1c2b6092858617ed3c189">第二版四輪車模型</a></strong></p>
 <p>可匯出提供參考</p>
-<br />Assignment 2 << <a href='Assignment 2.html'>Previous</a> <a href='onshape.html'>Next</a> >> onshape</div>
+<p></p>
+<h4><strong>傳統的產品設計</strong></h4>
+<p>首先我們需要知道時間成本對整個設計流程的重要性，</p>
+<p>假設一個產品的誕生需要經過機構、配電、程式、電資、外觀設計等流程‧</p>
+<p>若以過往的設計經驗來看需先由頭至尾一步一步經由每一位參與者的巧手下完成，</p>
+<p>在不發生不如意的情況下進行也至少需要花上好幾步的步驟來完成產品的設計‧</p>
+<p><img alt="" height="165" src="./../images/A1.傳統設計流程.png" width="600"/></p>
+<h4><strong>協同產品設計</strong></h4>
+<p>協同產品設計可在同一個時間點將不同領域的人們聚集起來，</p>
+<p>各自發揮所長進行產品設計的流程，</p>
+<p>將以往需要一整串的步驟一一打破，</p>
+<p>且在更有效率的環境下進行溝通且完成最佳化設計‧</p>
+<p><img alt="" height="610" src="./../images/A2.協同設計流程.png" width="600"/></p><br />Assignment 2 << <a href='Assignment 2.html'>Previous</a> <a href='onshape.html'>Next</a> >> onshape</div>
         
     <!-- footer -->
       <div class="container">
